# daly-bms-rs

./: .gitmodules  ARCHITECTURE_COMPARISON.md  Cargo.toml  README.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  daly-bms-bin-547f28ced46e01bd.js  daly-bms-bin-547f28ced46e01bd_bg.wasm  index.html  manifest.json  mobile.toml
.cargo/: config.toml
.github/workflows/: copilot-setup-steps.yml  pages.yml  pr-check.yml
assets/: sw.js
src/: app.rs  bluetooth.rs  data_structure.rs  fonts.rs  lib.rs  main.rs
